fix: html compliance, improve visual distinction in dark mode

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -30,7 +30,7 @@ body {
 
 /* dark mode */
 body.alt-color-mode { 
-  --bgnd-color: #0000006d;
+  --bgnd-color: #000;
   --article-bgnd-color: #333;
   --divider-color: #e6e6e6;
   --mobile-sidebar-bgnd-color: #5f5c59;
@@ -45,7 +45,7 @@ body.alt-color-mode {
 @media (prefers-color-scheme: dark) {
   /* dark mode */
   body { 
-    --bgnd-color: #0000006d;
+    --bgnd-color: #000;
     --article-bgnd-color: #333;
     --divider-color: #e6e6e6;
     --mobile-sidebar-bgnd-color: #5f5c59;
@@ -140,13 +140,19 @@ a:visited {
 
 
 /* Header title style */
-.header {
-  top: 0; /* Align it to the top of the page */
+.header-container {
+  top: 0;
   width: 100%;
-  z-index: 999; /* Ensure the header is above other content */
+  z-index: 999;
   position: fixed;
   text-align: center;
+}
+.header {
   background-color: var(--header-bgnd-color);
+}
+.header-padding {
+  height: 4px;
+  background: linear-gradient(var(--header-bgnd-color), var(--bgnd-color));
 }
 .header a:hover {
   color: var(--link-hover-color);
